# web

./: docker-compose.yml
app/: Dockerfile  app.py
model/: bentofile.yaml  example.http  pyproject.toml  service.py  setup.sh  test.py  transformer.py
model/generate/: service.py
