[tool.poetry]
name = "inference"
version = "0.1.0"
description = ""
authors = ["taekkim <taekkim@student.42seoul.kr>"]

[tool.poetry.dependencies]
python = "3.9.9"
bentoml = "1.0.0-a5"
transformers = "^4.16.2"
torch = "^1.10.2"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
